@@ -30,47 +30,28 @@
     <p>There are currently several different versions of GnuCash.
     We've adopted the kernel numbering scheme: even minor relase
     numbers (1.2.x, 1.4.x) are considered to mark stable releases,
-    while odd numbers (1.3.x) mark development releases.</p>
+    while odd numbers (1.3.x, 1.5.x) mark development releases.
+    </p>
 
     <ul>
-      <li>The current stable, production release is gnucash-1.2.5
-      and is based on the Open Group's Motif GUI library. Note,
-      however, that the Motif version is no longer being
-      maintained, and all development efforts have switched over to
-      the Gnome/GTK version.<br>
-      <br>
+      <li>The current stable, production release is gnucash-1.4.0 and
+      is based on the <a href= "http://www.gnome.org">Gnome</a> / <a
+      href= "http://www.gtk.org">GTK</a> libraries.
       </li>
 
-      <li>The 1.3.x releases focus on the the <a href=
-      "http://www.gnome.org">Gnome</a> / <a href=
-      "http://www.gtk.org">GTK</a> version. This version adds many
-      new features that are absent in the Motif version.
-      Development is progressing well, and the 1.3.x series are as
-      usable as the 1.2.5 version.<br>
-      <br>
+      <li>The 1.5.x releases focus on adding new features and
+      improving existing functionality.
       </li>
-
-      <li>Note that some more experimental versions, such as one
-      using the <a href="http://www.troll.no/products/qt.html">Qt
-      library from Troll Tech</a> for the for the <a href=
-      "http://www.kde.org/">KDE desktop</a>, for the Palm Computing
-      platforms, as well as a Java-based version have been
-      discussed and/or started. Source code for these, such as
-      there may be, is in the CVS tree.</li>
     </ul>
 
-    <p>The latest Gnome version, and latest versions in general,
-    are currently available only via CVS. Occasionally, some of the
-    more stable CVS versions are given a version number, and
-    packaged as a precompiled deb or rpm install package. Naive or
-    begining users should probably stick to version gnucash-1.2.5:
-    although this version is quite old and lacking in many
-    features, it is known to work. More adventurous users can try
-    one of the 1.3.x releases: these days, they are pretty stable,
-    and work pretty well. However, we cannot gaurentee that they
-    are flawless. We've tried to make sure that no matter how
-    broken these get, they won't mangle your data, but we can't
-    make promises.</p>
+    <p>The latest version is available only via CVS. Occasionally,
+    some of the more stable CVS versions are given a version number,
+    and packaged as a precompiled deb or rpm install package. Naive or
+    begining users should probably stick to version gnucash-1.4.0.
+    More adventurous users can try one of the 1.5.x releases, However,
+    keep in mind that they are in a state of constant change and will
+    often be unstable.
+    </p>
 
     <p>This document is divided into several sections.</p>
 
