@@ -146,17 +146,16 @@
     and "odd" sub-versions indicate an "experimental" stream that
     seeks to add enhancement.</p>
 
-    <p>The present "experimental" stream is gnucash-1.3.x, which is
+    <p>The present "experimental" stream is gnucash-1.5.x, which is
     somewhat unstable.</p>
 
-    <p>The latest stable release is 1.2.x; if you don't intend to
+    <p>The latest stable release is 1.4.x; if you don't intend to
     do development work, you should be using either this version,
-    or an older 1.0.x version. These versions are fairly stable,
+    or an older stable version. These versions are fairly stable,
     with all currently known bugs fixed.</p>
 
-    <p>Once the 1.3.x series stabilizes, the next stable series
-    will be 1.4.x, and experimentation will likely continue on
-    1.5.x.</p>
+    <p>Once the 1.5.x series stabilizes, the next stable series
+    will be 1.6.x.</p>
 
     <p>If you wish to "hack" on the experimental version, you
     should first start by reading through the <a href=
